# fschat

./: .gitignore  README.md
client/: CMakeLists.txt  HttpManager.cc  HttpManager.h  LoginDialog.cc  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cc  MainWindow.cpp  MainWindow.h  RegisterDialog.cc  RegisterDialog.h  RegisterDialog.ui  TimerButton.cc  TimerButton.h  global.cc  global.h  logo.qrc  main.cc  main.cpp  singleton.h
client/style/: StyleSheet.qss
server/: CMakeLists.txt  CMakePresets.json  config.ini  server.cpp
server/GateServer/: AsioIOContextPool.cpp  AsioIOContextPool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigManager.cpp  ConfigManager.h  GateServer.cpp  GateServer.h  GetVerifyCodeRpcClient.cpp  GetVerifyCodeRpcClient.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  RedisManager.cpp  RedisManager.h  config.ini  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto  singleton.h  ulti.h
server/GateServer/base/: ConfigManager.h  logger.h  noncopyable.h  singleton.h  ulti.cpp  ulti.h
server/GateServer/mysql/: MysqlDAO.cpp  MysqlDAO.h  MysqlManager.h  SqlConnection.h  SqlConnectionPool.cpp  SqlConnectionPool.h
server/GateServer/redis/: RedisConnectionPool.cpp  RedisConnectionPool.h  RedisManager.cpp  RedisManager.h
server/GateServer/rpc/: message.pb.cc
server/VerifyCodeServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
server/common/: CMakeLists.txt
server/common/base/: ConfigManager.cpp  logger.h  ulti.cpp  ulti.h
server/common/mysql/: MysqlDAO.cpp  MysqlDAO.h  MysqlManager.cpp  SqlConnection.cpp
server/common/redis/: RedisManager.cpp  RedisManager.h
